# NppAI

./: .gitignore  CMakeLists.txt  README.md  train_nppai.py
.github/workflows/: CI_build.yml  CI_update_remote.yml
datasets/: instruct_dataset.txt
src/: AIManager.cpp  AIManager.h  NppAIEngine.cpp  NppAIEngine.h  NppAI_Core.cpp  NppPluginDemo.cpp  PluginDefinition.cpp  PluginDefinition.h  TelemetryManager.cpp  TelemetryManager.h
vs.proj/: NppAI.vcxproj
